added styles more

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h3>Sliders of Images</h3>
+    <img src="images/download.jpeg" alt="">
+    <img src="images/problem-solution.jpg" alt="">
+    <img src="images/6487594.png" alt="">
 </body>
 </html>
